<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.eric.autobus.MainActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:text="@string/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvusr"
            android:textStyle="normal|bold"
            android:textColor="@android:color/black" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/introdueix_el_teu_usuari"
            android:ems="10"
            android:id="@+id/etUser" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvpswd"
            android:textStyle="normal|bold"
            android:textColor="@android:color/black" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/introdueix_la_contrasenya"
            android:ems="10"
            android:id="@+id/etPass" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:text="@string/accedeix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSubmit"
            android:layout_weight="1"/>

        <Button
            android:text="@string/acabar_jornada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnStop"
            android:layout_weight="1"/>
    </TableRow>

</TableLayout>
